--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  display: flex;
+  height: 100vh;
+  background-color: #343541;
 }
+
+.side-bar{
+  width: 244px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #202123;
+}
+
+.side-bar button {
+  padding: 10px;
+  margin: 10px;
+  background-color: transparent;
+  border-radius: 6px;
+  color: #fff;
+  border: solid .5px #fff;
+  cursor: pointer;
+}
+
+.history {
+  padding: 10px;
+  margin: 10px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.side-bar nav {
+  
+  border-top: solid .5px #fff;
+  padding: 10px;
+  margin: 10px;
+}
+
+.side-bar nav  p {
+  text-align: center;
+  color: #fff; 
+}
+
