--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
   color: #fff;
-  font-family: 'Open Sans', sans-serif;
-  
+  font-family: "Open Sans", sans-serif;
 }
 
 .app {
@@ -14,7 +13,9 @@
   background-color: #343541;
 }
 
-.side-bar{
+/* Sidebar */
+
+.side-bar {
   width: 244px;
   height: 100vh;
   display: flex;
@@ -28,8 +29,7 @@
   margin: 10px;
   background-color: transparent;
   border-radius: 6px;
-  color: #fff;
-  border: solid .5px #fff;
+  border: solid 0.5px #fff;
   cursor: pointer;
 }
 
@@ -42,14 +42,71 @@
 }
 
 .side-bar nav {
-  
-  border-top: solid .5px #fff;
+  border-top: solid 0.5px #fff;
   padding: 10px;
   margin: 10px;
 }
 
-.side-bar nav  p {
+.side-bar nav p {
   text-align: center;
-  color: #fff; 
 }
 
+.side-bar nav p a {
+  color: darkmagenta;
+}
+
+/* Main */
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 100vh;
+}
+
+.main h1 {
+  font-size: 33px;
+  font-weight: 600;
+  padding: 200px 0;
+}
+
+.bottom-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-container {
+  position: relative;
+  width: 100%;
+  max-width: 650px;
+}
+
+input {
+  border: none;
+  background-color: rgba(255, 255, 255, 0.05);
+  width: 100%;
+  font-size: 20px;
+  padding: 12px 15px;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 54px 55px, rgba(0, 0, 0, 0.5) 0 -12px 30px,
+    rgba(0, 0, 0, 0.5) 0 4px 6px, rgba(0, 0, 0, 0.5) 0 12px 25px,
+    rgba(0, 0, 0, 0.9) 0 -3px 5px;
+}
+
+.submit {
+  position: absolute;
+  right: 0;
+  bottom: 0px;
+  cursor: pointer;
+  font-size: 45px;
+}
+
+.info {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 11px;
+  padding: 10px;
+}
