added open ai conversation completion api when sending a message and conencted it to ui in front end

--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,10 @@ input {
     rgba(0, 0, 0, 0.9) 0 -3px 5px;
 }
 
+input:focus {
+  outline: none;
+}
+
 .submit {
   position: absolute;
   right: 0;
